config/extras/network-policy/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: satellite
  labels:
    app.kubernetes.io/component: linstor-satellite
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: linstor-satellite
  policyTypes:
  - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: linstor-controller
      ports:
        - protocol: TCP
          port: 3366
          endPort: 3367
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: linstor-satellite
      ports:
        - protocol: TCP
          port: 7000
          endPort: 9000
    - from:
        - namespaceSelector:
            matchLabels: {}
      ports:
        - protocol: TCP
          port: prometheus
